# console_calculator_cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh  run_release.sh
include/: calculadora.hpp
src/: calculadora.cpp  main.cpp
