CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(calculadora)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_EXTENSIONS OFF)

FILE(GLOB_RECURSE SRC_FILES src/*.cpp)

SET_SOURCE_FILES_PROPERTIES( SRC_FILES PROPERTIES COMPILE_OPTIONS  "-Wall;-Wextra;-Wpedantic;-Werror")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
